AnalogIn, DigIn, DigOut added

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,6 +1,6 @@
 include_directories(../include/)
 
-set(COMEDIEEROS_SRCS ComediDevice.cpp)
+set(COMEDIEEROS_SRCS ComediDevice.cpp DigIn.cpp DigOut.cpp AnalogIn.cpp)
 
 add_library(comedieeros SHARED ${COMEDIEEROS_SRCS})
 add_library(comedieeros_static ${COMEDIEEROS_SRCS})
@@ -9,6 +9,3 @@ target_link_libraries(comedieeros comedi eeros)
 target_link_libraries(comedieeros_static comedi eeros)
 
 INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/libcomedieeros.so ${CMAKE_CURRENT_BINARY_DIR}/libcomedieeros_static.a DESTINATION lib)
-
-#add_dependencies(comedieeros ComediDevice)
-#add_dependencies(comedieeros_static ComediDevice)
