--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,4 +29,6 @@ INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/ComediDevice.hpp
 	${CMAKE_CURRENT_SOURCE_DIR}/include/DigIn.hpp
 	${CMAKE_CURRENT_SOURCE_DIR}/include/DigOut.hpp
 	${CMAKE_CURRENT_SOURCE_DIR}/include/AnalogIn.hpp
+	${CMAKE_CURRENT_SOURCE_DIR}/include/AnalogOut.hpp
+	${CMAKE_CURRENT_SOURCE_DIR}/include/Fqd.hpp
 DESTINATION include)
